--- a/proj1109/angeline/templates/angeline/base.html
+++ b/proj1109/angeline/templates/angeline/base.html
@@ -9,6 +9,9 @@
     <header>
         <h1>Bem-vindo ao Meu Sistema</h1>
     </header>
+    {% block navbar %}
+       {% include 'angeline/nav.html' %}
+    {% endblock %}
 
     <main>
         {% block content %}
