--- a/proj1109/angeline/templates/angeline/nav.html
+++ b/proj1109/angeline/templates/angeline/nav.html
@@ -9,6 +9,11 @@
         <li>
             <a href="/contato">Meu primeiro form Contato</a>
         </li>
+        <li>
+            <a href="/bia">Index Beatrice</a>
+            <br>
+            <a href="{% url 'bianca:index_bianca' %}">Index Bia com url automatica</a>
+        </li>
     </ul>
     
 </nav>
