ok, corrigido requirements.txt

--- a/proj1109/angeline/templates/angeline/nav.html
+++ b/proj1109/angeline/templates/angeline/nav.html
@@ -1,10 +1,10 @@
 <nav>
     <ul>
         <li>
-            <a href="/">Inicio</a>
+            <a href="/">Home (ex002)</a>
         </li>
         <li>
-            <a href="/ex002">Exercicio 002</a>
+            <a href="/helloworld">Hello World (sem extend do base.html) </a>
         </li>
         <li>
             <a href="/contato">Meu primeiro form Contato</a>
