--- a/proj1109/angeline/templates/angeline/nav.html
+++ b/proj1109/angeline/templates/angeline/nav.html
@@ -10,10 +10,16 @@
             <a href="/contato">Meu primeiro form Contato</a>
         </li>
         <li>
-            <a href="/bia">Index Beatrice</a>
+            <a href="/bia">Index bianca</a>
             <br>
             <a href="{% url 'bianca:index_bianca' %}">Index Bia com url automatica</a>
         </li>
+        <ul>
+            <li>
+                <a href="/bianca/ex001">ex001</a>
+                <a href="{% url 'bianca:ex001' %}">ex001</a>
+            </li>
+                </ul>
     </ul>
     
 </nav>
