--- a/proj1109/bianca/templates/bianca/ex001.html
+++ b/proj1109/bianca/templates/bianca/ex001.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <h1> {{ titulo }} </h1>
-<p>{{ passo }}</p>
+<p>:{{ passo }}:</p>
 <p> O metodo que veio foi um tipo  {{ metodo }}</p>
 <p> O seu endereco ip é {{ ip_address }}</p>
 
