--- a/proj1109/angeline/templates/angeline/nav.html
+++ b/proj1109/angeline/templates/angeline/nav.html
@@ -20,6 +20,10 @@
                 <a href="{% url 'bianca:ex001' %}">ex001</a>
             </li>
                 </ul>
+            <li>
+                <a href="/bianca/ex003">ex003</a>
+            </li>
+            
     </ul>
     
 </nav>
