--- a/proj1109/angeline/templates/angeline/nav.html
+++ b/proj1109/angeline/templates/angeline/nav.html
@@ -23,6 +23,9 @@
             <li>
                 <a href="/bianca/ex003">ex003</a>
             </li>
+            <li>
+                <a href="/bianca/ex004">ex004</a>
+            </li>
             
     </ul>
     
