--- a/proj1109/angeline/templates/angeline/base.html
+++ b/proj1109/angeline/templates/angeline/base.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Sistema</title>
+    <title>♡ 𝓜𝓮𝓾  𝓼𝒾𝓼𝓽𝓮𝓶𝓪  ♡</title>
 </head>
 <body>
     <header>
-        <h1>Bem-vindo ao Meu Sistema</h1>
+        <h1>♡ 𝓢𝒾𝓼𝓽𝓮𝓶𝓪  𝓭𝓪  𝓑𝒾𝓪 ♡</h1>
     </header>
     {% block navbar %}
        {% include 'angeline/nav.html' %}
