--- a/proj1109/bianca/templates/bianca/ex004.html
+++ b/proj1109/bianca/templates/bianca/ex004.html
@@ -1,14 +1,10 @@
 {% extends "angeline/base.html" %}
 
 {% block content %}
-<h2>Formulário de Contato</h2>
+<h2>Formulário Exercícios 004</h2>
 
-<h1> {{ titulo }} </h1>
-<p>{{ passo }}</p>
-<p> O metodo que veio foi um tipo  {{ metodo }}</p>
-<p> O seu endereco ip é {{ ip_address }}</p>
+Resultado: {{meu_dicionario}}
 
-<h2>Formulário de Contato</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
