--- a/proj1109/angeline/templates/angeline/nav.html
+++ b/proj1109/angeline/templates/angeline/nav.html
@@ -24,6 +24,9 @@
             <li>
                 <a href="/bianca/ex004">ex004</a>
             </li>
+            <li>
+                <a href="/bianca/ex005">ex004</a>
+            </li>
         </ul>
             
     </ul>
