--- a/proj1109/angeline/templates/angeline/nav.html
+++ b/proj1109/angeline/templates/angeline/nav.html
@@ -27,6 +27,9 @@
             <li>
                 <a href="/bianca/ex005">ex005</a>
             </li>
+            <li>
+                <a href="/bianca/ex006r">ex006</a>
+            </li>
         </ul>
             
     </ul>
